# cmake_minimum_required(VERSION <specify CMake version here>)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)

add_executable(001_Two_Sum solution/001_Two_Sum.cpp)
add_executable(002_Add_Two_Numbers solution/002_Add_Two_Numbers.cpp)
add_executable(003_Longest_Substring_Without_Repeating_Characters solution/003_Longest_Substring_Without_Repeating_Characters.cpp)
add_executable(004_Median_of_Two_Sorted_Arrays solution/004_Median_of_Two_Sorted_Arrays.cpp)
add_executable(005_Longest_Palindromic_Substring solution/005_Longest_Palindromic_Substring.cpp)
add_executable(006_ZigZag_Conversion solution/006_ZigZag_Conversion.cpp)
add_executable(007_Reverse_Integer solution/007_Reverse_Integer.cpp)
add_executable(008_String_to_Integer solution/008_String_to_Integer.cpp)
add_executable(009_Palindrome_Number solution/009_Palindrome_Number.cpp)
add_executable(010_Regular_Expression_Matching solution/010_Regular_Expression_Matching.cpp)
add_executable(014_Longest_Common_Prefix solution/014_Longest_Common_Prefix.cpp)
add_executable(011_Container_With_Most_Water solution/011_Container_With_Most_Water.cpp)
add_executable(012_Integer_to_Roman solution/012_Integer_to_Roman.cpp)
add_executable(015_3Sum solution/015_3Sum.cpp)
add_executable(887_Projection_Area_of_3D_Shapes solution/883_Projection_Area_of_3D_Shapes.cpp)
add_executable(885_Boats_to_Save_People solution/885_Boats_to_Save_People.cpp)
add_executable(884_Decoded_String_at_Index solution/884_Decoded_String_at_Index.cpp)
add_executable(016_3Sum_Closest solution/016_3Sum_Closest.cpp)
add_executable(017_Letter_Combinations_of_a_Phone_Number solution/017_Letter_Combinations_of_a_Phone_Number.cpp)
add_executable(018_4Sum solution/018_4Sum.cpp)
add_executable(019_Remove_Nth_Node_From_End_of_List solution/019_Remove_Nth_Node_From_End_of_List.cpp)
add_executable(020_Valid_Parentheses solution/020_Valid_Parentheses.cpp)
add_executable(021_Merge_Two_Sorted_Lists solution/021_Merge_Two_Sorted_Lists.cpp)
add_executable(022_Generate_Parentheses solution/022_Generate_Parentheses.cpp)
add_executable(024_Swap_Nodes_in_Pairs solution/024_Swap_Nodes_in_Pairs.cpp)
add_executable(026_Remove_Duplicates_from_Sorted_Array solution/026_Remove_Duplicates_from_Sorted_Array.cpp)
add_executable(027_Remove_Element solution/027_Remove_Element.cpp)
add_executable(029_Divide_Two_Integers solution/029_Divide_Two_Integers.cpp)
add_executable(031_Next_Permutaion solution/031_Next_Permutaion.cpp)
add_executable(914_X_of_a_Kind_in_a_Deck_of_Cards solution/914_X_of_a_Kind_in_a_Deck_of_Cards.cpp)
add_executable(915_Partition_Array_into_Disjoint_Intervals solution/915_Partition_Array_into_Disjoint_Intervals.cpp)
add_executable(916_Word_Subsets solution/916_Word_Subsets.cpp)
add_executable(913_Cat_and_Mouse solution/913_Cat_and_Mouse.cpp)

add_executable(033_Search_in_Rotated_Sorted_Array solution/033_Search_in_Rotated_Sorted_Array.cpp)
add_executable(035_Count_and_Say solution/035_Count_and_Say.cpp)

add_executable(039_Combination_Sum solution/039_Combination_Sum.cpp)
add_executable(065_Valid_Number solution/065_Valid_Number.cpp)
add_executable(149_Max_Points_on_a_Line solution/149_Max_Points_on_a_Line.cpp)
add_executable(032_Longest_Valid_Parentheses solution/032_Longest_Valid_Parentheses.cpp)
add_executable(063_Unique_Paths_II solution/063_Unique_Paths_II.cpp)
add_executable(064_Minimum_Path_Sum solution/064_Minimum_Path_Sum.cpp)
add_executable(072_Edit_Distance solution/072_Edit_Distance.cpp)
add_executable(087_Scramble_String solution/087_Scramble_String.cpp)
add_executable(198_House_Robber solution/198_House_Robber.cpp)
add_executable(213_House_Robber_II solution/213_House_Robber_II.cpp)
add_executable(337_House_Robber_III solution/337_House_Robber_III.cpp)
add_executable(095_Unique_Binary_Search_Tree_II solution/095_Unique_Binary_Search_Tree_II.cpp)
add_executable(095_Unique_Binary_Search_Tree_II_ solution/095_Unique_Binary_Search_Tree_II_.cpp)
add_executable(115_Distince_Subsequences solution/115_Distince_Subsequences.cpp)
add_executable(120_Triangle solution/120_Triangle.cpp)
add_executable(121_Best_Time_to_Buy_and_Sell_Stock solution/121_Best_Time_to_Buy_and_Sell_Stock.cpp)
add_executable(122_Best_Time_to_Bug_and_Sell_Stock_II solution/122_Best_Time_to_Bug_and_Sell_Stock_II.cpp)
add_executable(123_Best_Time_to_Buy_and_Sell_Stock_III solution/123_Best_Time_to_Buy_and_Sell_Stock_III.cpp)
add_executable(152_Maximum_Product_Subarray solution/152_Maximum_Product_Subarray.cpp)
add_executable(151_Reverse_Words_in_a_String solution/151_Reverse_Words_in_a_String.cpp)
add_executable(304_Range_Sum_Query_2D solution/304_Range_Sum_Query_2D.cpp)
add_executable(438_Find_All_Anagrams_in_a_String solution/438_Find_All_Anagrams_in_a_String.cpp)
add_executable(309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown solution/309_Best_Time_to_Buy_and_Sell_Stock_with_Cooldown.cpp)
add_executable(876_Middle_of_the_Linked_List solution/876_Middle_of_the_Linked_List.cpp)
add_executable(206_Reverse_Linked_List solution/206_Reverse_Linked_List.cpp)
add_executable(023_Merge_k_Sorted_Lists solution/023_Merge_k_Sorted_Lists.cpp)
add_executable(025_Reverse_Nodes_in_k-Group solution/025_Reverse_Nodes_in_k-Group.cpp)
add_executable(061_Rotate_List solution/061_Rotate_List.cpp)
add_executable(086_Partition_List solution/086_Partition_List.cpp)
add_executable(082_Remove_Duplicates_from_Sorted_List_II solution/082_Remove_Duplicates_from_Sorted_List_II.cpp)
add_executable(083_Remove_Duplicates_from_Sorted_List solution/083_Remove_Duplicates_from_Sorted_List.cpp)
add_executable(092_Reverse_Linked_List_II solution/092_Reverse_Linked_List_II.cpp)
add_executable(109_Convert_Sorted_List_to_Binary_Search_Tree solution/109_Convert_Sorted_List_to_Binary_Search_Tree.cpp)
add_executable(138_Copy_List_with_Random_Pointer solution/138_Copy_List_with_Random_Pointer.cpp)
add_executable(141_Linked_List_Cycle solution/141_Linked_List_Cycle.cpp)
add_executable(142_Linked_List_Cycle_II solution/142_Linked_List_Cycle_II.cpp)
add_executable(143_Reorder_List solution/143_Reorder_List.cpp)
add_executable(147_Insertion_Sort_List solution/147_Insertion_Sort_List.cpp)
add_executable(148_Sort_List solution/148_Sort_List.cpp)
add_executable(160_Intersection_of_Two_Linked_Lists solution/160_Intersection_of_Two_Linked_Lists.cpp)
add_executable(203_Remove_Linked_List_Elements solution/203_Remove_Linked_List_Elements.cpp)
add_executable(234_Palindrome_Linked_List solution/234_Palindrome_Linked_List.cpp)
add_executable(237_Delete_Node_in_a_Linked_List solution/237_Delete_Node_in_a_Linked_List.cpp)
add_executable(328_Odd_Even_Linked_List solution/328_Odd_Even_Linked_List.cpp)
add_executable(445_Add_Two_Numbers_II solution/445_Add_Two_Numbers_II.cpp)
add_executable(725_Split_Linked_List_in_Parts solution/725_Split_Linked_List_in_Parts.cpp)
add_executable(707_Design_Linked_List solution/707_Design_Linked_List.cpp)
add_executable(817_Lined_List_Components solution/817_Lined_List_Components.cpp)
add_executable(430_Flatten_a_Multilevel_Doubly_Linked_List solution/430_Flatten_a_Multilevel_Doubly_Linked_List.cpp)
add_executable(042_Trapping_Rain_Water solution/042_Trapping_Rain_Water.cpp)
add_executable(071_Simplify_Path solution/071_Simplify_Path.cpp)
add_executable(084_Largest_Rectangle_in_Histogram solution/084_Largest_Rectangle_in_Histogram.cpp)
add_executable(094_Binary_Tree_Inorder_Traversal solution/094_Binary_Tree_Inorder_Traversal.cpp)
add_executable(103_Binary_Tree_Zigzag_Level_Order_Traversal solution/103_Binary_Tree_Zigzag_Level_Order_Traversal.cpp)
add_executable(144_Binary_Tree_Preorder_Traversal solution/144_Binary_Tree_Preorder_Traversal.cpp)
add_executable(145_Binary_Tree_Postorder_Traversal solution/145_Binary_Tree_Postorder_Traversal.cpp)
add_executable(150_Evaluate_Reverse_Polish_Notation solution/150_Evaluate_Reverse_Polish_Notation.cpp)
add_executable(155_Min_Stack solution/155_Min_Stack.cpp)
add_executable(173_Binary_Search_Tree_Iterator solution/173_Binary_Search_Tree_Iterator.cpp)
add_executable(224_Basic_Calculator solution/224_Basic_Calculator.cpp)
add_executable(225_Implement_Stack_using_Queues solution/225_Implement_Stack_using_Queues.cpp)
add_executable(232_Implement_Queue_using_Stacks solution/232_Implement_Queue_using_Stacks.cpp)
add_executable(331_Verify_Preorder_Serialization_of_a_Binary_Tree solution/331_Verify_Preorder_Serialization_of_a_Binary_Tree.cpp)
add_executable(341_Flatten_Nested_List_Iterator solution/341_Flatten_Nested_List_Iterator.cpp)
add_executable(385_Mini_Parser solution/385_Mini_Parser.cpp)
add_executable(394_Decode_String solution/394_Decode_String.cpp)
add_executable(402_Remove_K_Digits solution/402_Remove_K_Digits.cpp)
add_executable(456_132_Pattern solution/456_132_Pattern.cpp)
add_executable(496_Next_Greater_Element_I solution/496_Next_Greater_Element_I.cpp)
add_executable(503_Next_Greater_Element_II solution/503_Next_Greater_Element_II.cpp)
add_executable(636_Exclusive_Time_of_Function solution/636_Exclusive_Time_of_Function.cpp)
add_executable(682_Baseball_Game solution/682_Baseball_Game.cpp)
add_executable(735_Asteroid_Collision solution/735_Asteroid_Collision.cpp)
add_executable(739_Daily_Temperatures solution/739_Daily_Temperatures.cpp)
add_executable(qsort basic/sort/qsort.cpp)
add_executable(134_Gas_Station solution/134_Gas_Station.cpp)
add_executable(376_Wiggle_Subsequence solution/376_Wiggle_Subsequence.cpp)
add_executable(392_Is_Subsequence solution/392_Is_Subsequence.cpp)
add_executable(406_Queue_Reconstruction_by_Height solution/406_Queue_Reconstruction_by_Height.cpp)
add_executable(435_Non-overlapping_Intervals solution/435_Non-overlapping_Intervals.cpp)
add_executable(tree basic/tree.cpp)
add_executable(452_Minimum_Number_of_Arrows_to_Burst_Balloons solution/452_Minimum_Number_of_Arrows_to_Burst_Balloons.cpp)
add_executable(455_Assign_Cookies solution/455_Assign_Cookies.cpp)
add_executable(621_Task_Scheduler solution/621_Task_Scheduler.cpp)
add_executable(649_Dota2_Senate solution/649_Dota2_Senate.cpp)
add_executable(659_Split_Array_into_Consecutive_Subsequences solution/659_Split_Array_into_Consecutive_Subsequences.cpp)
add_executable(714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee solution/714_Best_Time_to_Buy_and_Sell_Stock_with_Transaction_Fee.cpp)
add_executable(738_Monotone_Increasing_Digits solution/738_Monotone_Increasing_Digits.cpp)
add_executable(763_Partition_Labels solution/763_Partition_Labels.cpp)
add_executable(767_Reorganize_String solution/767_Reorganize_String.cpp)
add_executable(842_Split_Array_into_Fibonacci_Sequence solution/842_Split_Array_into_Fibonacci_Sequence.cpp)
add_executable(860_Lemonade_Change solution/860_Lemonade_Change.cpp)
add_executable(861_Score_After_Flipping_Matrix solution/861_Score_After_Flipping_Matrix.cpp)
add_executable(870_Advantage_Shuffle solution/870_Advantage_Shuffle.cpp)
add_executable(874_Walking_Robot_Simulation solution/874_Walking_Robot_Simulation.cpp)
add_executable(910_Smallest_Range_II solution/910_Smallest_Range_II.cpp)
add_executable(921_Minimum_Add_to_Make_Parentheses_Valid solution/921_Minimum_Add_to_Make_Parentheses_Valid.cpp)
add_executable(944_Delete_Columns_to_Make_Sorted solution/944_Delete_Columns_to_Make_Sorted.cpp)
add_executable(133_Clone_Graph solution/133_Clone_Graph.cpp)
add_executable(207_Course_Schedule solution/207_Course_Schedule.cpp)
add_executable(210_Course_Schedule_II solution/210_Course_Schedule_II.cpp)
add_executable(310_Minimum_Height_Tree solution/310_Minimum_Height_Tree.cpp)
add_executable(332_Reconstruct_Itinerary solution/332_Reconstruct_Itinerary.cpp)
add_executable(399_Evaluate_Division solution/399_Evaluate_Division.cpp)
add_executable(040_Combination_Sum_II solution/040_Combination_Sum_II.cpp)
add_executable(043_Multiply_Strings solution/043_Multiply_Strings.cpp)
add_executable(058_Length_of_Last_Word solution/058_Length_of_Last_Word.cpp)
add_executable(066_Plus_One solution/066_Plus_One.cpp)
add_executable(067_Add_Binary solution/067_Add_Binary.cpp)
add_executable(name other/name.cpp)
add_executable(046_Permutations solution/046_Permutations.cpp)
add_executable(048_Rotate_Image solution/048_Rotate_Image.cpp)
add_executable(049_Group_Anagrams solution/049_Group_Anagrams.cpp)
add_executable(056_Merge_Intervals solution/056_Merge_Intervals.cpp)
add_executable(062_Unique_Paths solution/062_Unique_Paths.cpp)
add_executable(075_Sort_Colors solution/075_Sort_Colors.cpp)
add_executable(078_Subsets solution/078_Subsets.cpp)
add_executable(079_Word_Search solution/079_Word_Search.cpp)
add_executable(096_Unique_Binary_Search_Trees solution/096_Unique_Binary_Search_Trees.cpp)
add_executable(098_Validate_Binary_Search_Tree "solution/098_Validate_Binary_Search_Tree.cpp")
add_executable(102_Binary_Tree_Level_Order_Traversal solution/102_Binary_Tree_Level_Order_Traversal.cpp)
add_executable(105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal solution/105_Construct_Binary_Tree_from_Preorder_and_Inorder_Traversal.cpp)
add_executable(101_Symmetric_Tree solution/101_Symmetric_Tree.cpp)
add_executable(114_Flatten_Binary_Tree_to_Linked_List solution/114_Flatten_Binary_Tree_to_Linked_List.cpp)
add_executable(136_Single_Number solution/136_Single_Number.cpp)
add_executable(139_Word_Break solution/139_Word_Break.cpp)
add_executable(146_LRU_Cache solution/146_LRU_Cache.cpp)
add_executable(200_Number_of_Islands solution/200_Number_of_Islands.cpp)
add_executable(208_Implement_Trie_Prefix_Tree solution/208_Implement_Trie_Prefix_Tree.cpp)
add_executable(215_Kth_Largest_Element_in_an_Array solution/215_Kth_Largest_Element_in_an_Array.cpp)
add_executable(041_First_Missing_Positive solution/041_First_Missing_Positive.cpp)
add_executable(076_Minimum_Window_Substring solution/076_Minimum_Window_Substring.cpp)
add_executable(617_Merge_Two_Binary_Trees solution/617_Merge_Two_Binary_Trees.cpp)
add_executable(581_Shortest_Unsorted_Continuous_Subarray solution/581_Shortest_Unsorted_Continuous_Subarray.cpp)
add_executable(448_Find_All_Numbers_Disappeared_in_an_Array solution/448_Find_All_Numbers_Disappeared_in_an_Array.cpp)
add_executable(543_Diameter_of_Binary_Tree solution/543_Diameter_of_Binary_Tree.cpp)
add_executable(238_Product_of_Array_Except_Self solution/238_Product_of_Array_Except_Self.cpp)
add_executable(236_Lowest_Common_Ancestor_of_a_Binary_Tree solution/236_Lowest_Common_Ancestor_of_a_Binary_Tree.cpp)
add_executable(240_Search_a_2D_Matrix_II solution/240_Search_a_2D_Matrix_II.cpp)
add_executable(279_Perfect_Squares solution/279_Perfect_Squares.cpp)
add_executable(287_Find_the_Duplicate_Number solution/287_Find_the_Duplicate_Number.cpp)
add_executable(300_Longest_Increasing_Subsequence solution/300_Longest_Increasing_Subsequence.cpp)
add_executable(560_Subarray_Sum_Equals_k solution/560_Subarray_Sum_Equals_k.cpp)
add_executable(437_Path_Sum_III solution/437_Path_Sum_III.cpp)
add_executable(322_Coin_Change solution/322_Coin_Change.cpp)
add_executable(312_Burst_Balloons solution/312_Burst_Balloons.cpp)
add_executable(338_Counting_Bits solution/338_Counting_Bits.cpp)
add_executable(416_Partition_Equal_Subset_Sum solution/416_Partition_Equal_Subset_Sum.cpp)
add_executable(347_Top_K_Frequent_Elements solution/347_Top_K_Frequent_Elements.cpp)
add_executable(050_Powx_n solution/050_Powx_n.cpp)
add_executable(054_Spiral_Matrix solution/054_Spiral_Matrix.cpp)
add_executable(088_Merge_Sorted_Array solution/088_Merge_Sorted_Array.cpp)
add_executable(108_Convert_Sorted_Array_to_Binary_Search_Tree solution/108_Convert_Sorted_Array_to_Binary_Search_Tree.cpp)
add_executable(073_Set_Matrix_Zeroes solution/073_Set_Matrix_Zeroes.cpp)
add_executable(069_Sqrtx solution/069_Sqrtx.cpp)
add_executable(091_Decode_Ways "solution/091_Decode_Ways.cpp")
add_executable(118_Pascals_Triangle solution/118_Pascals_Triangle.cpp)
add_executable(116_Populating_Next_Right_Pointers_in_Each_Node solution/116_Populating_Next_Right_Pointers_in_Each_Node.cpp)
add_executable(125_Valid_Palindrome solution/125_Valid_Palindrome.cpp)
add_executable(127_Word_Ladder solution/127_Word_Ladder.cpp)
add_executable(130_Surrounded_Regions solution/130_Surrounded_Regions.cpp)
add_executable(189_Rotate_Array solution/189_Rotate_Array.cpp)
add_executable(162_Find_Peak_Element solution/162_Find_Peak_Element.cpp)
add_executable(172_Factorial_Trailing_Zeroes solution/172_Factorial_Trailing_Zeroes.cpp)
add_executable(131_Palindrome_Partitioning solution/131_Palindrome_Partitioning.cpp)
add_executable(166_Fraction_to_Recurring_Decimal solution/166_Fraction_to_Recurring_Decimal.cpp)
add_executable(085_Maximal_Rectangle solution/085_Maximal_Rectangle.cpp)
add_executable(124_Binary_Tree_Maximum_Path_Sum solution/124_Binary_Tree_Maximum_Path_Sum.cpp)
add_executable(128_Longest_Consecutive_Sequence solution/128_Longest_Consecutive_Sequence.cpp)
add_executable(221_Maximal_Square solution/221_Maximal_Square.cpp)
add_executable(295_Find_Median_from_Data_Stream solution/295_Find_Median_from_Data_Stream.cpp)
add_executable(239_Sliding_Window_Maximum solution/239_Sliding_Window_Maximum.cpp)
add_executable(297_Serialize_and_Deserialize_Binary_Tree solution/297_Serialize_and_Deserialize_Binary_Tree.cpp)
add_executable(301_Remove_Invalid_Parentheses solution/301_Remove_Invalid_Parentheses.cpp)
add_executable(289_Game_of_Life solution/289_Game_of_Life.cpp)
add_executable(034_Find_First_and_Last_Position_of_Element_in_Sorted_Array solution/034_Find_First_and_Last_Position_of_Element_in_Sorted_Array.cpp)

add_executable(test solution/test.cpp)
add_executable(153_Find_Minimum_in_Rotated_Sorted_Array solution/153_Find_Minimum_in_Rotated_Sorted_Array.cpp)
add_executable(090_Subsets_II solution/090_Subsets_II.cpp)
add_executable(047_Permutations_II solution/047_Permutations_II.cpp)
add_executable(053_Maximum_Subarray solution/053_Maximum_Subarray.cpp)
add_executable(055_Jump_Game solution/055_Jump_Game.cpp)
add_executable(045_Jump_Game_II solution/045_Jump_Game_II.cpp)
add_executable(1306_Jump_Game_III solution/1306_Jump_Game_III.cpp)
add_executable(070_Climbing_Stairs solution/070_Climbing_Stairs.cpp)
add_executable(104_Maximum_Depth_of_Binary_Tree solution/104_Maximum_Depth_of_Binary_Tree.cpp)